# gemini-desktop

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README_FRENCH.md  build.bat  release-please-config.json  vcpkg.json
.github/workflows/: release-please.yml  release.yml
installer/: GeminiDesktop.iss
res/: app.manifest  app.rc
src/: App.cpp  App.hpp  Constants.hpp  Paths.cpp  Paths.hpp  SingleInstance.cpp  SingleInstance.hpp  Startup.cpp  Startup.hpp  Tray.cpp  Tray.hpp  main.cpp
